add more of the existing contents

--- a/apps/docs/src/css/custom.css
+++ b/apps/docs/src/css/custom.css
@@ -15,3 +15,7 @@
   --ifm-color-primary-lighter: rgb(102, 212, 189);
   --ifm-color-primary-lightest: rgb(146, 224, 208);
 }
+
+html {
+  scroll-padding-top: 125px;
+}
