--- a/apps/docs/src/css/custom.css
+++ b/apps/docs/src/css/custom.css
@@ -1,5 +1,5 @@
 @import 'tailwindcss/base';
-@import '@uzh-bf/design-system/dist/index.esm.css';
+@import '@uzh-bf/design-system/dist/style.css';
 
 @import 'tailwindcss/components';
 
