--- a/apps/frontend-manage/src/globals.css
+++ b/apps/frontend-manage/src/globals.css
@@ -1,7 +1,7 @@
 @import 'tailwindcss/src/css/preflight.css';
 
 @import 'tailwindcss/base';
-@import '@uzh-bf/design-system/dist/index.esm.css';
+@import '@uzh-bf/design-system/dist/style.css';
 
 @import 'tailwindcss/components';
 /* @import '@klicker-uzh/markdown/dist/components.css'; */
