--- a/packages/qti/templates/itemKPRIM.xml
+++ b/packages/qti/templates/itemKPRIM.xml
@@ -1,14 +1,21 @@
 <assessmentItem xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xmlns="http://www.imsglobal.org/xsd/imsqti_v2p1" identifier="itemMC"
-  title="Flying Animals" adaptive="false" timeDependent="false" toolName="OpenOLAT"
-  toolVersion="6.1.0"
+  xmlns="http://www.imsglobal.org/xsd/imsqti_v2p1" identifier="itemKPRIM"
+  title="Kprim" adaptive="false" timeDependent="false" toolName="OpenOLAT" toolVersion="6.1.0"
   xsi:schemaLocation="http://www.imsglobal.org/xsd/imsqti_v2p1 http://www.imsglobal.org/xsd/imsqti_v2p1.xsd">
 
-  <responseDeclaration identifier="RESPONSE_1" cardinality="multiple" baseType="identifier">
+  <responseDeclaration identifier="KPRIM_RESPONSE_1" cardinality="multiple" baseType="directedPair">
     <correctResponse>
-      <value>mc2</value>
-      <value>mc4</value>
+      <value>kp1 wrong</value>
+      <value>kp2 correct</value>
+      <value>kp3 wrong</value>
+      <value>kp4 correct</value>
     </correctResponse>
+    <mapping defaultValue="-0.25">
+      <mapEntry mapKey="kp1 wrong" mappedValue="0.25" />
+      <mapEntry mapKey="kp2 correct" mappedValue="0.25" />
+      <mapEntry mapKey="kp3 wrong" mappedValue="0.25" />
+      <mapEntry mapKey="kp4 correct" mappedValue="0.25" />
+    </mapping>
   </responseDeclaration>
 
   <outcomeDeclaration identifier="FEEDBACKBASIC" cardinality="single" baseType="identifier"
@@ -17,12 +24,6 @@
       <value>none</value>
     </defaultValue>
   </outcomeDeclaration>
-
-  <outcomeDeclaration identifier="FEEDBACKMODAL" cardinality="multiple" baseType="identifier"
-    view="testConstructor" />
-
-  <outcomeDeclaration identifier="SOLUTIONMODAL" cardinality="single" baseType="identifier"
-    view="testConstructor" />
 
   <outcomeDeclaration identifier="SCORE" cardinality="single" baseType="float">
     <defaultValue>
@@ -44,28 +45,60 @@
   </outcomeDeclaration>
 
   <itemBody>
-    <div>
-      <div>Which animals can fly?</div>
-    </div>
-
-    <choiceInteraction responseIdentifier="RESPONSE_1" shuffle="true" maxChoices="0" minChoices="0"
-      orientation="vertical">
-      <simpleChoice identifier="mc1"><p>Crocodiles</p></simpleChoice>
-      <simpleChoice identifier="mc2"><p>Eagles</p></simpleChoice>
-      <simpleChoice identifier="mc3"><p>Kangaroos</p></simpleChoice>
-      <simpleChoice identifier="mc4"><p>Butterflies</p></simpleChoice>
-      <simpleChoice identifier="mc5"><p>Dogs</p></simpleChoice>
-    </choiceInteraction>
-
+    <matchInteraction class="match_krpim" responseIdentifier="KPRIM_RESPONSE_1" shuffle="false"
+      maxAssociations="4">
+      <simpleMatchSet>
+        <simpleAssociableChoice identifier="kp1" matchMax="1" matchMin="1"><p>New answer a</p></simpleAssociableChoice>
+        <simpleAssociableChoice identifier="kp2" matchMax="1" matchMin="1"><p>New answer b</p></simpleAssociableChoice>
+        <simpleAssociableChoice identifier="kp3" matchMax="1" matchMin="1"><p>New answer c</p></simpleAssociableChoice>
+        <simpleAssociableChoice identifier="kp4" matchMax="1" matchMin="1"><p>New answer d</p></simpleAssociableChoice>
+      </simpleMatchSet>
+      <simpleMatchSet>
+        <simpleAssociableChoice identifier="correct" fixed="true" matchMax="4">+</simpleAssociableChoice>
+        <simpleAssociableChoice identifier="wrong" fixed="true" matchMax="4">-</simpleAssociableChoice>
+      </simpleMatchSet>
+    </matchInteraction>
   </itemBody>
 
   <responseProcessing>
 
     <responseCondition>
       <responseIf>
+        <isNull>
+          <variable identifier="KPRIM_RESPONSE_1" />
+        </isNull>
+        <setOutcomeValue identifier="FEEDBACKBASIC">
+          <baseValue baseType="identifier">empty</baseValue>
+        </setOutcomeValue>
+      </responseIf>
+      <responseElseIf>
+        <not>
+          <equal toleranceMode="exact">
+            <containerSize>
+              <variable identifier="KPRIM_RESPONSE_1" />
+            </containerSize>
+            <baseValue baseType="integer">4</baseValue>
+          </equal>
+        </not>
+        <setOutcomeValue identifier="SCORE">
+          <sum>
+            <mapResponse identifier="KPRIM_RESPONSE_1" />
+            <product>
+              <subtract>
+                <baseValue baseType="integer">4</baseValue>
+                <containerSize>
+                  <variable identifier="KPRIM_RESPONSE_1" />
+                </containerSize>
+              </subtract>
+              <baseValue baseType="float">-0.25</baseValue>
+            </product>
+          </sum>
+        </setOutcomeValue>
+      </responseElseIf>
+      <responseElseIf>
         <match>
-          <variable identifier="RESPONSE_1" />
-          <correct identifier="RESPONSE_1" />
+          <variable identifier="KPRIM_RESPONSE_1" />
+          <correct identifier="KPRIM_RESPONSE_1" />
         </match>
         <setOutcomeValue identifier="SCORE">
           <sum>
@@ -76,111 +109,17 @@
         <setOutcomeValue identifier="FEEDBACKBASIC">
           <baseValue baseType="identifier">correct</baseValue>
         </setOutcomeValue>
-      </responseIf>
+      </responseElseIf>
       <responseElse>
+        <setOutcomeValue identifier="SCORE">
+          <sum>
+            <mapResponse identifier="KPRIM_RESPONSE_1" />
+          </sum>
+        </setOutcomeValue>
         <setOutcomeValue identifier="FEEDBACKBASIC">
           <baseValue baseType="identifier">incorrect</baseValue>
         </setOutcomeValue>
       </responseElse>
-    </responseCondition>
-
-    <responseCondition>
-      <responseIf>
-        <and>
-          <match>
-            <baseValue baseType="identifier">incorrect</baseValue>
-            <variable identifier="FEEDBACKBASIC" />
-          </match>
-        </and>
-        <setOutcomeValue identifier="SOLUTIONMODAL">
-          <baseValue baseType="identifier">fbIncorrect</baseValue>
-        </setOutcomeValue>
-      </responseIf>
-    </responseCondition>
-
-    <responseCondition>
-      <responseIf>
-        <and>
-          <member>
-            <baseValue baseType="identifier">mc1</baseValue>
-            <variable identifier="RESPONSE_1" />
-          </member>
-        </and>
-        <setOutcomeValue identifier="FEEDBACKMODAL">
-          <multiple>
-            <variable identifier="FEEDBACKMODAL" />
-            <baseValue baseType="identifier">fb1</baseValue>
-          </multiple>
-        </setOutcomeValue>
-      </responseIf>
-    </responseCondition>
-
-    <responseCondition>
-      <responseIf>
-        <and>
-          <member>
-            <baseValue baseType="identifier">mc2</baseValue>
-            <variable identifier="RESPONSE_1" />
-          </member>
-        </and>
-        <setOutcomeValue identifier="FEEDBACKMODAL">
-          <multiple>
-            <variable identifier="FEEDBACKMODAL" />
-            <baseValue baseType="identifier">fb2</baseValue>
-          </multiple>
-        </setOutcomeValue>
-      </responseIf>
-    </responseCondition>
-
-    <responseCondition>
-      <responseIf>
-        <and>
-          <member>
-            <baseValue baseType="identifier">mc3</baseValue>
-            <variable identifier="RESPONSE_1" />
-          </member>
-        </and>
-        <setOutcomeValue identifier="FEEDBACKMODAL">
-          <multiple>
-            <variable identifier="FEEDBACKMODAL" />
-            <baseValue baseType="identifier">fb3</baseValue>
-          </multiple>
-        </setOutcomeValue>
-      </responseIf>
-    </responseCondition>
-
-    <responseCondition>
-      <responseIf>
-        <and>
-          <member>
-            <baseValue baseType="identifier">mc4</baseValue>
-            <variable identifier="RESPONSE_1" />
-          </member>
-        </and>
-        <setOutcomeValue identifier="FEEDBACKMODAL">
-          <multiple>
-            <variable identifier="FEEDBACKMODAL" />
-            <baseValue baseType="identifier">fb4</baseValue>
-          </multiple>
-        </setOutcomeValue>
-      </responseIf>
-    </responseCondition>
-
-    <responseCondition>
-      <responseIf>
-        <and>
-          <member>
-            <baseValue baseType="identifier">mc5</baseValue>
-            <variable identifier="RESPONSE_1" />
-          </member>
-        </and>
-        <setOutcomeValue identifier="FEEDBACKMODAL">
-          <multiple>
-            <variable identifier="FEEDBACKMODAL" />
-            <baseValue baseType="identifier">fb5</baseValue>
-          </multiple>
-        </setOutcomeValue>
-      </responseIf>
     </responseCondition>
 
     <responseCondition>
@@ -208,24 +147,5 @@
     </responseCondition>
 
   </responseProcessing>
-
-  <modalFeedback showHide="show" outcomeIdentifier="SOLUTIONMODAL"
-    identifier="fbIncorrect" title="Explanation"><p>The eagle and butterfly have wings and can fly.
-    The other animals are land animals that cannot fly.</p></modalFeedback>
-
-  <modalFeedback showHide="show" outcomeIdentifier="FEEDBACKMODAL"
-    identifier="fb1" title="Crocodile Feedback"><p>No, crocodiles cannot fly!</p></modalFeedback>
-
-  <modalFeedback showHide="show" outcomeIdentifier="FEEDBACKMODAL"
-    identifier="fb2" title="Eagles Feedback"><p>Yes, eagles can fly!</p></modalFeedback>
-
-  <modalFeedback showHide="show" outcomeIdentifier="FEEDBACKMODAL"
-    identifier="fb3" title="Kangaroos Feedback"><p>No kangaroos cannot fly!</p></modalFeedback>
-
-  <modalFeedback showHide="show" outcomeIdentifier="FEEDBACKMODAL"
-    identifier="fb4" title="Butterflies Feedback"><p>Yes, butterflies can fly!</p></modalFeedback>
-
-  <modalFeedback showHide="show" outcomeIdentifier="FEEDBACKMODAL"
-    identifier="fb5" title="Dogs Feedback"><p>No, dogs cannot fly!</p></modalFeedback>
 
 </assessmentItem>
