--- a/packages/qti/templates/itemMC.xml.jinja
+++ b/packages/qti/templates/itemMC.xml.jinja
@@ -1,231 +1,202 @@
-<assessmentItem xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xmlns="http://www.imsglobal.org/xsd/imsqti_v2p1" identifier="itemMC"
-  title="Flying Animals" adaptive="false" timeDependent="false" toolName="OpenOLAT"
-  toolVersion="6.1.0"
-  xsi:schemaLocation="http://www.imsglobal.org/xsd/imsqti_v2p1 http://www.imsglobal.org/xsd/imsqti_v2p1.xsd">
+{% extends "item.xml.jinja" %}
 
-  <responseDeclaration identifier="RESPONSE_1" cardinality="multiple" baseType="identifier">
-    <correctResponse>
-      <value>mc2</value>
-      <value>mc4</value>
-    </correctResponse>
-  </responseDeclaration>
+{% block responseDeclaration %}
+<responseDeclaration identifier="RESPONSE_1" cardinality="multiple" baseType="identifier">
+  <correctResponse>
+    <value>mc2</value>
+    <value>mc4</value>
+  </correctResponse>
+</responseDeclaration>
+{% endblock %}
 
-  <outcomeDeclaration identifier="FEEDBACKBASIC" cardinality="single" baseType="identifier"
-    view="testConstructor">
-    <defaultValue>
-      <value>none</value>
-    </defaultValue>
-  </outcomeDeclaration>
-
-  <outcomeDeclaration identifier="FEEDBACKMODAL" cardinality="multiple" baseType="identifier"
+{% block outcomeDeclarations %}
+<outcomeDeclaration identifier="FEEDBACKMODAL" cardinality="multiple" baseType="identifier"
     view="testConstructor" />
 
-  <outcomeDeclaration identifier="SOLUTIONMODAL" cardinality="single" baseType="identifier"
+<outcomeDeclaration identifier="SOLUTIONMODAL" cardinality="single" baseType="identifier"
     view="testConstructor" />
+{% endblock %}
 
-  <outcomeDeclaration identifier="SCORE" cardinality="single" baseType="float">
-    <defaultValue>
-      <value>0.0</value>
-    </defaultValue>
-  </outcomeDeclaration>
+{% block itemBody %}
+<div>
+  <div>Which animals can fly?</div>
+</div>
 
-  <outcomeDeclaration identifier="MINSCORE" cardinality="single" baseType="float"
-    view="testConstructor">
-    <defaultValue>
-      <value>0.0</value>
-    </defaultValue>
-  </outcomeDeclaration>
+<choiceInteraction responseIdentifier="RESPONSE_1" shuffle="true" maxChoices="0" minChoices="0"
+  orientation="vertical">
+  <simpleChoice identifier="mc1"><p>Crocodiles</p></simpleChoice>
+  <simpleChoice identifier="mc2"><p>Eagles</p></simpleChoice>
+  <simpleChoice identifier="mc3"><p>Kangaroos</p></simpleChoice>
+  <simpleChoice identifier="mc4"><p>Butterflies</p></simpleChoice>
+  <simpleChoice identifier="mc5"><p>Dogs</p></simpleChoice>
+</choiceInteraction>
+{% endblock %}
 
-  <outcomeDeclaration identifier="MAXSCORE" cardinality="single" baseType="float">
-    <defaultValue>
-      <value>1.0</value>
-    </defaultValue>
-  </outcomeDeclaration>
+{% block responseProcessing %}
+<responseCondition>
+  <responseIf>
+    <match>
+      <variable identifier="RESPONSE_1" />
+      <correct identifier="RESPONSE_1" />
+    </match>
+    <setOutcomeValue identifier="SCORE">
+      <sum>
+        <variable identifier="SCORE" />
+        <variable identifier="MAXSCORE" />
+      </sum>
+    </setOutcomeValue>
+    <setOutcomeValue identifier="FEEDBACKBASIC">
+      <baseValue baseType="identifier">correct</baseValue>
+    </setOutcomeValue>
+  </responseIf>
+  <responseElse>
+    <setOutcomeValue identifier="FEEDBACKBASIC">
+      <baseValue baseType="identifier">incorrect</baseValue>
+    </setOutcomeValue>
+  </responseElse>
+</responseCondition>
 
-  <itemBody>
-    <div>
-      <div>Which animals can fly?</div>
-    </div>
+<responseCondition>
+  <responseIf>
+    <and>
+      <match>
+        <baseValue baseType="identifier">incorrect</baseValue>
+        <variable identifier="FEEDBACKBASIC" />
+      </match>
+    </and>
+    <setOutcomeValue identifier="SOLUTIONMODAL">
+      <baseValue baseType="identifier">fbIncorrect</baseValue>
+    </setOutcomeValue>
+  </responseIf>
+</responseCondition>
 
-    <choiceInteraction responseIdentifier="RESPONSE_1" shuffle="true" maxChoices="0" minChoices="0"
-      orientation="vertical">
-      <simpleChoice identifier="mc1"><p>Crocodiles</p></simpleChoice>
-      <simpleChoice identifier="mc2"><p>Eagles</p></simpleChoice>
-      <simpleChoice identifier="mc3"><p>Kangaroos</p></simpleChoice>
-      <simpleChoice identifier="mc4"><p>Butterflies</p></simpleChoice>
-      <simpleChoice identifier="mc5"><p>Dogs</p></simpleChoice>
-    </choiceInteraction>
+<responseCondition>
+  <responseIf>
+    <and>
+      <member>
+        <baseValue baseType="identifier">mc1</baseValue>
+        <variable identifier="RESPONSE_1" />
+      </member>
+    </and>
+    <setOutcomeValue identifier="FEEDBACKMODAL">
+      <multiple>
+        <variable identifier="FEEDBACKMODAL" />
+        <baseValue baseType="identifier">fb1</baseValue>
+      </multiple>
+    </setOutcomeValue>
+  </responseIf>
+</responseCondition>
 
-  </itemBody>
+<responseCondition>
+  <responseIf>
+    <and>
+      <member>
+        <baseValue baseType="identifier">mc2</baseValue>
+        <variable identifier="RESPONSE_1" />
+      </member>
+    </and>
+    <setOutcomeValue identifier="FEEDBACKMODAL">
+      <multiple>
+        <variable identifier="FEEDBACKMODAL" />
+        <baseValue baseType="identifier">fb2</baseValue>
+      </multiple>
+    </setOutcomeValue>
+  </responseIf>
+</responseCondition>
 
-  <responseProcessing>
+<responseCondition>
+  <responseIf>
+    <and>
+      <member>
+        <baseValue baseType="identifier">mc3</baseValue>
+        <variable identifier="RESPONSE_1" />
+      </member>
+    </and>
+    <setOutcomeValue identifier="FEEDBACKMODAL">
+      <multiple>
+        <variable identifier="FEEDBACKMODAL" />
+        <baseValue baseType="identifier">fb3</baseValue>
+      </multiple>
+    </setOutcomeValue>
+  </responseIf>
+</responseCondition>
 
-    <responseCondition>
-      <responseIf>
-        <match>
-          <variable identifier="RESPONSE_1" />
-          <correct identifier="RESPONSE_1" />
-        </match>
-        <setOutcomeValue identifier="SCORE">
-          <sum>
-            <variable identifier="SCORE" />
-            <variable identifier="MAXSCORE" />
-          </sum>
-        </setOutcomeValue>
-        <setOutcomeValue identifier="FEEDBACKBASIC">
-          <baseValue baseType="identifier">correct</baseValue>
-        </setOutcomeValue>
-      </responseIf>
-      <responseElse>
-        <setOutcomeValue identifier="FEEDBACKBASIC">
-          <baseValue baseType="identifier">incorrect</baseValue>
-        </setOutcomeValue>
-      </responseElse>
-    </responseCondition>
+<responseCondition>
+  <responseIf>
+    <and>
+      <member>
+        <baseValue baseType="identifier">mc4</baseValue>
+        <variable identifier="RESPONSE_1" />
+      </member>
+    </and>
+    <setOutcomeValue identifier="FEEDBACKMODAL">
+      <multiple>
+        <variable identifier="FEEDBACKMODAL" />
+        <baseValue baseType="identifier">fb4</baseValue>
+      </multiple>
+    </setOutcomeValue>
+  </responseIf>
+</responseCondition>
 
-    <responseCondition>
-      <responseIf>
-        <and>
-          <match>
-            <baseValue baseType="identifier">incorrect</baseValue>
-            <variable identifier="FEEDBACKBASIC" />
-          </match>
-        </and>
-        <setOutcomeValue identifier="SOLUTIONMODAL">
-          <baseValue baseType="identifier">fbIncorrect</baseValue>
-        </setOutcomeValue>
-      </responseIf>
-    </responseCondition>
+<responseCondition>
+  <responseIf>
+    <and>
+      <member>
+        <baseValue baseType="identifier">mc5</baseValue>
+        <variable identifier="RESPONSE_1" />
+      </member>
+    </and>
+    <setOutcomeValue identifier="FEEDBACKMODAL">
+      <multiple>
+        <variable identifier="FEEDBACKMODAL" />
+        <baseValue baseType="identifier">fb5</baseValue>
+      </multiple>
+    </setOutcomeValue>
+  </responseIf>
+</responseCondition>
 
-    <responseCondition>
-      <responseIf>
-        <and>
-          <member>
-            <baseValue baseType="identifier">mc1</baseValue>
-            <variable identifier="RESPONSE_1" />
-          </member>
-        </and>
-        <setOutcomeValue identifier="FEEDBACKMODAL">
-          <multiple>
-            <variable identifier="FEEDBACKMODAL" />
-            <baseValue baseType="identifier">fb1</baseValue>
-          </multiple>
-        </setOutcomeValue>
-      </responseIf>
-    </responseCondition>
+<responseCondition>
+  <responseIf>
+    <lt>
+      <variable identifier="SCORE" />
+      <variable identifier="MINSCORE" />
+    </lt>
+    <setOutcomeValue identifier="SCORE">
+      <variable identifier="MINSCORE" />
+    </setOutcomeValue>
+  </responseIf>
+</responseCondition>
 
-    <responseCondition>
-      <responseIf>
-        <and>
-          <member>
-            <baseValue baseType="identifier">mc2</baseValue>
-            <variable identifier="RESPONSE_1" />
-          </member>
-        </and>
-        <setOutcomeValue identifier="FEEDBACKMODAL">
-          <multiple>
-            <variable identifier="FEEDBACKMODAL" />
-            <baseValue baseType="identifier">fb2</baseValue>
-          </multiple>
-        </setOutcomeValue>
-      </responseIf>
-    </responseCondition>
+<responseCondition>
+  <responseIf>
+    <gt>
+      <variable identifier="SCORE" />
+      <variable identifier="MAXSCORE" />
+    </gt>
+    <setOutcomeValue identifier="SCORE">
+      <variable identifier="MAXSCORE" />
+    </setOutcomeValue>
+  </responseIf>
+</responseCondition>
+{% endblock %}
 
-    <responseCondition>
-      <responseIf>
-        <and>
-          <member>
-            <baseValue baseType="identifier">mc3</baseValue>
-            <variable identifier="RESPONSE_1" />
-          </member>
-        </and>
-        <setOutcomeValue identifier="FEEDBACKMODAL">
-          <multiple>
-            <variable identifier="FEEDBACKMODAL" />
-            <baseValue baseType="identifier">fb3</baseValue>
-          </multiple>
-        </setOutcomeValue>
-      </responseIf>
-    </responseCondition>
+{% block modalFeedbacks %}
+<modalFeedback showHide="show" outcomeIdentifier="SOLUTIONMODAL"
+  identifier="fbIncorrect" title="Explanation"><p>The eagle and butterfly have wings and can fly.
+  The other animals are land animals that cannot fly.</p></modalFeedback>
 
-    <responseCondition>
-      <responseIf>
-        <and>
-          <member>
-            <baseValue baseType="identifier">mc4</baseValue>
-            <variable identifier="RESPONSE_1" />
-          </member>
-        </and>
-        <setOutcomeValue identifier="FEEDBACKMODAL">
-          <multiple>
-            <variable identifier="FEEDBACKMODAL" />
-            <baseValue baseType="identifier">fb4</baseValue>
-          </multiple>
-        </setOutcomeValue>
-      </responseIf>
-    </responseCondition>
+<modalFeedback showHide="show" outcomeIdentifier="FEEDBACKMODAL"
+  identifier="fb1" title="Crocodile Feedback"><p>No, crocodiles cannot fly!</p></modalFeedback>
 
-    <responseCondition>
-      <responseIf>
-        <and>
-          <member>
-            <baseValue baseType="identifier">mc5</baseValue>
-            <variable identifier="RESPONSE_1" />
-          </member>
-        </and>
-        <setOutcomeValue identifier="FEEDBACKMODAL">
-          <multiple>
-            <variable identifier="FEEDBACKMODAL" />
-            <baseValue baseType="identifier">fb5</baseValue>
-          </multiple>
-        </setOutcomeValue>
-      </responseIf>
-    </responseCondition>
+<modalFeedback showHide="show" outcomeIdentifier="FEEDBACKMODAL"
+  identifier="fb2" title="Eagles Feedback"><p>Yes, eagles can fly!</p></modalFeedback>
 
-    <responseCondition>
-      <responseIf>
-        <lt>
-          <variable identifier="SCORE" />
-          <variable identifier="MINSCORE" />
-        </lt>
-        <setOutcomeValue identifier="SCORE">
-          <variable identifier="MINSCORE" />
-        </setOutcomeValue>
-      </responseIf>
-    </responseCondition>
+<modalFeedback showHide="show" outcomeIdentifier="FEEDBACKMODAL"
+  identifier="fb3" title="Kangaroos Feedback"><p>No kangaroos cannot fly!</p></modalFeedback>
 
-    <responseCondition>
-      <responseIf>
-        <gt>
-          <variable identifier="SCORE" />
-          <variable identifier="MAXSCORE" />
-        </gt>
-        <setOutcomeValue identifier="SCORE">
-          <variable identifier="MAXSCORE" />
-        </setOutcomeValue>
-      </responseIf>
-    </responseCondition>
+<modalFeedback showHide="show" outcomeIdentifier="FEEDBACKMODAL"
+  identifier="fb4" title="Butterflies Feedback"><p>Yes, butterflies can fly!</p></modalFeedback>
 
-  </responseProcessing>
-
-  <modalFeedback showHide="show" outcomeIdentifier="SOLUTIONMODAL"
-    identifier="fbIncorrect" title="Explanation"><p>The eagle and butterfly have wings and can fly.
-    The other animals are land animals that cannot fly.</p></modalFeedback>
-
-  <modalFeedback showHide="show" outcomeIdentifier="FEEDBACKMODAL"
-    identifier="fb1" title="Crocodile Feedback"><p>No, crocodiles cannot fly!</p></modalFeedback>
-
-  <modalFeedback showHide="show" outcomeIdentifier="FEEDBACKMODAL"
-    identifier="fb2" title="Eagles Feedback"><p>Yes, eagles can fly!</p></modalFeedback>
-
-  <modalFeedback showHide="show" outcomeIdentifier="FEEDBACKMODAL"
-    identifier="fb3" title="Kangaroos Feedback"><p>No kangaroos cannot fly!</p></modalFeedback>
-
-  <modalFeedback showHide="show" outcomeIdentifier="FEEDBACKMODAL"
-    identifier="fb4" title="Butterflies Feedback"><p>Yes, butterflies can fly!</p></modalFeedback>
-
-  <modalFeedback showHide="show" outcomeIdentifier="FEEDBACKMODAL"
-    identifier="fb5" title="Dogs Feedback"><p>No, dogs cannot fly!</p></modalFeedback>
-
-</assessmentItem>
+<modalFeedback showHide="show" outcomeIdentifier="FEEDBACKMODAL"
+  identifier="fb5" title="Dogs Feedback"><p>No, dogs cannot fly!</p></modalFeedback>
+{% endblock %}
