--- a/packages/qti/templates/itemSC.xml.jinja
+++ b/packages/qti/templates/itemSC.xml.jinja
@@ -1,110 +1,85 @@
-<assessmentItem xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xmlns="http://www.imsglobal.org/xsd/imsqti_v2p1" identifier="itemSC"
-  title="SC Question" adaptive="false" timeDependent="false" toolName="OpenOLAT" toolVersion="6.1.0"
-  xsi:schemaLocation="http://www.imsglobal.org/xsd/imsqti_v2p1 http://www.imsglobal.org/xsd/imsqti_v2p1.xsd">
+{% extends "item.xml.jinja" %}
 
-  <responseDeclaration identifier="RESPONSE_1" cardinality="single" baseType="identifier">
-    <correctResponse>
-      <value>sc1</value>
-    </correctResponse>
-  </responseDeclaration>
+{% block responseDeclaration %}
+<responseDeclaration identifier="RESPONSE_1" cardinality="single" baseType="identifier">
+  <correctResponse>
+    <value>sc1</value>
+  </correctResponse>
+</responseDeclaration>
+{% endblock %}
 
-  <outcomeDeclaration identifier="SCORE" cardinality="single" baseType="float">
-    <defaultValue>
-      <value>0.0</value>
-    </defaultValue>
-  </outcomeDeclaration>
+{% block outcomeDeclarations %}
+{% endblock %}
 
-  <outcomeDeclaration identifier="MINSCORE" cardinality="single" baseType="float"
-    view="testConstructor">
-    <defaultValue>
-      <value>0.0</value>
-    </defaultValue>
-  </outcomeDeclaration>
+{% block itemBody %}
+<div>
+  <div>Which animals can fly?</div>
+</div>
 
-  <outcomeDeclaration identifier="MAXSCORE" cardinality="single" baseType="float">
-    <defaultValue>
-      <value>1.0</value>
-    </defaultValue>
-  </outcomeDeclaration>
+<choiceInteraction responseIdentifier="RESPONSE_1" shuffle="true" maxChoices="1"
+  orientation="vertical">
+  <simpleChoice identifier="sc1"><p><span class="math">\frac{1}{2}</span></p></simpleChoice>
+  <simpleChoice identifier="sc2"><p>B</p></simpleChoice>
+  <simpleChoice identifier="sc3"><p>C</p></simpleChoice>
+</choiceInteraction>
+{% endblock %}
 
-  <outcomeDeclaration identifier="FEEDBACKBASIC" cardinality="single" baseType="identifier"
-    view="testConstructor">
-    <defaultValue>
-      <value>none</value>
-    </defaultValue>
-  </outcomeDeclaration>
+{% block responseProcessing %}
+<responseCondition>
+  <responseIf>
+    <isNull>
+      <variable identifier="RESPONSE_1" />
+    </isNull>
+    <setOutcomeValue identifier="FEEDBACKBASIC">
+      <baseValue baseType="identifier">empty</baseValue>
+    </setOutcomeValue>
+  </responseIf>
+  <responseElseIf>
+    <match>
+      <variable identifier="RESPONSE_1" />
+      <correct identifier="RESPONSE_1" />
+    </match>
+    <setOutcomeValue identifier="SCORE">
+      <sum>
+        <variable identifier="SCORE" />
+        <variable identifier="MAXSCORE" />
+      </sum>
+    </setOutcomeValue>
+    <setOutcomeValue identifier="FEEDBACKBASIC">
+      <baseValue baseType="identifier">correct</baseValue>
+    </setOutcomeValue>
+  </responseElseIf>
+  <responseElse>
+    <setOutcomeValue identifier="FEEDBACKBASIC">
+      <baseValue baseType="identifier">incorrect</baseValue>
+    </setOutcomeValue>
+  </responseElse>
+</responseCondition>
 
-  <itemBody>
-    <div>
-      <div>Which animals can fly?</div>
-    </div>
+<responseCondition>
+  <responseIf>
+    <lt>
+      <variable identifier="SCORE" />
+      <variable identifier="MINSCORE" />
+    </lt>
+    <setOutcomeValue identifier="SCORE">
+      <variable identifier="MINSCORE" />
+    </setOutcomeValue>
+  </responseIf>
+</responseCondition>
 
-    <choiceInteraction responseIdentifier="RESPONSE_1" shuffle="true" maxChoices="1"
-      orientation="vertical">
-      <simpleChoice identifier="sc1"><p><span class="math">\frac{1}{2}</span></p></simpleChoice>
-      <simpleChoice identifier="sc2"><p>B</p></simpleChoice>
-      <simpleChoice identifier="sc3"><p>C</p></simpleChoice>
-    </choiceInteraction>
-  </itemBody>
+<responseCondition>
+  <responseIf>
+    <gt>
+      <variable identifier="SCORE" />
+      <variable identifier="MAXSCORE" />
+    </gt>
+    <setOutcomeValue identifier="SCORE">
+      <variable identifier="MAXSCORE" />
+    </setOutcomeValue>
+  </responseIf>
+</responseCondition>
+{% endblock %}
 
-  <responseProcessing>
-
-    <responseCondition>
-      <responseIf>
-        <isNull>
-          <variable identifier="RESPONSE_1" />
-        </isNull>
-        <setOutcomeValue identifier="FEEDBACKBASIC">
-          <baseValue baseType="identifier">empty</baseValue>
-        </setOutcomeValue>
-      </responseIf>
-      <responseElseIf>
-        <match>
-          <variable identifier="RESPONSE_1" />
-          <correct identifier="RESPONSE_1" />
-        </match>
-        <setOutcomeValue identifier="SCORE">
-          <sum>
-            <variable identifier="SCORE" />
-            <variable identifier="MAXSCORE" />
-          </sum>
-        </setOutcomeValue>
-        <setOutcomeValue identifier="FEEDBACKBASIC">
-          <baseValue baseType="identifier">correct</baseValue>
-        </setOutcomeValue>
-      </responseElseIf>
-      <responseElse>
-        <setOutcomeValue identifier="FEEDBACKBASIC">
-          <baseValue baseType="identifier">incorrect</baseValue>
-        </setOutcomeValue>
-      </responseElse>
-    </responseCondition>
-
-    <responseCondition>
-      <responseIf>
-        <lt>
-          <variable identifier="SCORE" />
-          <variable identifier="MINSCORE" />
-        </lt>
-        <setOutcomeValue identifier="SCORE">
-          <variable identifier="MINSCORE" />
-        </setOutcomeValue>
-      </responseIf>
-    </responseCondition>
-
-    <responseCondition>
-      <responseIf>
-        <gt>
-          <variable identifier="SCORE" />
-          <variable identifier="MAXSCORE" />
-        </gt>
-        <setOutcomeValue identifier="SCORE">
-          <variable identifier="MAXSCORE" />
-        </setOutcomeValue>
-      </responseIf>
-    </responseCondition>
-
-  </responseProcessing>
-
-</assessmentItem>
+{% block modalFeedbacks %}
+{% endblock %}
