--- a/packages/qti/templates/test.xml.jinja
+++ b/packages/qti/templates/test.xml.jinja
@@ -1,6 +1,6 @@
 <assessmentTest xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xmlns="http://www.imsglobal.org/xsd/imsqti_v2p1" identifier="test8003858f45408af9592a5be26e5c"
-  title="{{title}}" toolName="OpenOLAT" toolVersion="6.1.0"
+  xmlns="http://www.imsglobal.org/xsd/imsqti_v2p1" identifier="test"
+  title="{{title}}" toolName="KlickerUZH" toolVersion="3.2.0"
   xsi:schemaLocation="http://www.imsglobal.org/xsd/imsqti_v2p1 http://www.imsglobal.org/xsd/imsqti_v2p1.xsd">
 
   <outcomeDeclaration identifier="MINSCORE" cardinality="single" baseType="float">
