--- a/packages/qti/templates/itemMC.xml.jinja
+++ b/packages/qti/templates/itemMC.xml.jinja
@@ -3,8 +3,9 @@
 {% block responseDeclaration %}
 <responseDeclaration identifier="RESPONSE_1" cardinality="multiple" baseType="identifier">
   <correctResponse>
-    <value>mc2</value>
-    <value>mc4</value>
+    {% for correct_response in item.correct_response %}
+    <value>{{correct_response}}</value>
+    {% endfor %}
   </correctResponse>
 </responseDeclaration>
 {% endblock %}
@@ -24,17 +25,23 @@
 
 <choiceInteraction responseIdentifier="RESPONSE_1" shuffle="true" maxChoices="0" minChoices="0"
   orientation="vertical">
-  <simpleChoice identifier="mc1"><p>Crocodiles</p></simpleChoice>
-  <simpleChoice identifier="mc2"><p>Eagles</p></simpleChoice>
-  <simpleChoice identifier="mc3"><p>Kangaroos</p></simpleChoice>
-  <simpleChoice identifier="mc4"><p>Butterflies</p></simpleChoice>
-  <simpleChoice identifier="mc5"><p>Dogs</p></simpleChoice>
+  {% for option in item.options %}
+  <simpleChoice identifier="{{option.identifier}}"><p>{{option.content}}</p></simpleChoice>
+  {% endfor %}
 </choiceInteraction>
 {% endblock %}
 
 {% block responseProcessing %}
 <responseCondition>
   <responseIf>
+    <isNull>
+      <variable identifier="RESPONSE_1" />
+    </isNull>
+    <setOutcomeValue identifier="FEEDBACKBASIC">
+      <baseValue baseType="identifier">empty</baseValue>
+    </setOutcomeValue>
+  </responseIf>
+  <responseElseIf>
     <match>
       <variable identifier="RESPONSE_1" />
       <correct identifier="RESPONSE_1" />
@@ -48,7 +55,7 @@
     <setOutcomeValue identifier="FEEDBACKBASIC">
       <baseValue baseType="identifier">correct</baseValue>
     </setOutcomeValue>
-  </responseIf>
+  </responseElseIf>
   <responseElse>
     <setOutcomeValue identifier="FEEDBACKBASIC">
       <baseValue baseType="identifier">incorrect</baseValue>
@@ -59,22 +66,8 @@
 <responseCondition>
   <responseIf>
     <and>
-      <match>
-        <baseValue baseType="identifier">incorrect</baseValue>
-        <variable identifier="FEEDBACKBASIC" />
-      </match>
-    </and>
-    <setOutcomeValue identifier="SOLUTIONMODAL">
-      <baseValue baseType="identifier">fbIncorrect</baseValue>
-    </setOutcomeValue>
-  </responseIf>
-</responseCondition>
-
-<responseCondition>
-  <responseIf>
-    <and>
       <member>
-        <baseValue baseType="identifier">mc1</baseValue>
+        <baseValue baseType="identifier">opt1</baseValue>
         <variable identifier="RESPONSE_1" />
       </member>
     </and>
@@ -91,7 +84,7 @@
   <responseIf>
     <and>
       <member>
-        <baseValue baseType="identifier">mc2</baseValue>
+        <baseValue baseType="identifier">opt2</baseValue>
         <variable identifier="RESPONSE_1" />
       </member>
     </and>
@@ -108,7 +101,7 @@
   <responseIf>
     <and>
       <member>
-        <baseValue baseType="identifier">mc3</baseValue>
+        <baseValue baseType="identifier">opt3</baseValue>
         <variable identifier="RESPONSE_1" />
       </member>
     </and>
@@ -125,7 +118,7 @@
   <responseIf>
     <and>
       <member>
-        <baseValue baseType="identifier">mc4</baseValue>
+        <baseValue baseType="identifier">opt4</baseValue>
         <variable identifier="RESPONSE_1" />
       </member>
     </and>
@@ -142,7 +135,7 @@
   <responseIf>
     <and>
       <member>
-        <baseValue baseType="identifier">mc5</baseValue>
+        <baseValue baseType="identifier">opt5</baseValue>
         <variable identifier="RESPONSE_1" />
       </member>
     </and>
@@ -151,30 +144,6 @@
         <variable identifier="FEEDBACKMODAL" />
         <baseValue baseType="identifier">fb5</baseValue>
       </multiple>
-    </setOutcomeValue>
-  </responseIf>
-</responseCondition>
-
-<responseCondition>
-  <responseIf>
-    <lt>
-      <variable identifier="SCORE" />
-      <variable identifier="MINSCORE" />
-    </lt>
-    <setOutcomeValue identifier="SCORE">
-      <variable identifier="MINSCORE" />
-    </setOutcomeValue>
-  </responseIf>
-</responseCondition>
-
-<responseCondition>
-  <responseIf>
-    <gt>
-      <variable identifier="SCORE" />
-      <variable identifier="MAXSCORE" />
-    </gt>
-    <setOutcomeValue identifier="SCORE">
-      <variable identifier="MAXSCORE" />
     </setOutcomeValue>
   </responseIf>
 </responseCondition>
