change version to OpenOLAT 6.1.0 to ensure import works

--- a/packages/qti/templates/item.xml.jinja
+++ b/packages/qti/templates/item.xml.jinja
@@ -1,6 +1,6 @@
 <assessmentItem xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xmlns="http://www.imsglobal.org/xsd/imsqti_v2p1" identifier="{{item.identifier}}"
-  title="{{item.title}}" adaptive="false" timeDependent="false" toolName="KlickerUZH" toolVersion="3.2.0"
+  title="{{item.title}}" adaptive="false" timeDependent="false" toolName="OpenOLAT" toolVersion="6.1.0"
   xsi:schemaLocation="http://www.imsglobal.org/xsd/imsqti_v2p1 http://www.imsglobal.org/xsd/imsqti_v2p1.xsd">
 
   {% block responseDeclaration %}{% endblock %}
