add preview for QTI

--- a/packages/qti/templates/itemFREE_TEXT.xml.jinja
+++ b/packages/qti/templates/itemFREE_TEXT.xml.jinja
@@ -8,9 +8,7 @@
 {% endblock %}
 
 {% block itemBody %}
-<div>
-  <div>Which animals can fly?</div>
-</div>
+<div>{{item.content}}</div>
 
 <extendedTextInteraction responseIdentifier="RESPONSE_1" />
 {% endblock %}
