--- a/packages/qti/templates/itemNUMERICAL.xml.jinja
+++ b/packages/qti/templates/itemNUMERICAL.xml.jinja
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block itemBody %}
-<p>New text <textEntryInteraction responseIdentifier="RESPONSE_1" /></p>
+<p>{{item.content}}<br /><textEntryInteraction responseIdentifier="RESPONSE_1" /></p>
 {% endblock %}
 
 {% block responseProcessing %}
